--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -34,9 +34,10 @@
 		</div>
 	{% endblock %}
 		<script>var translation = {'unsavedChanges':'{% trans %}You have unsaved changes.{% endtrans %}'}</script>
-		<script src="{{resources}}/jquery/jquery-2.1.0.min.js"></script>
+		<script src="{{resources}}/jquery/jquery-2.1.1.min.js"></script>
 		<script src="{{resources}}/jquery/jquery.are-you-sure.js"></script>
 		<script src="{{resources}}/bootstrap/js/bootstrap.min.js"></script>
+		<script src="{{resources}}/typeahead.js/typeahead.bundle.min.js"></script>
 		<script src="{{resources}}/lorry/js/lorry.js"></script>
 		{% for script in scripts %}
 		<script src="{{resources}}{{script}}"></script>
