--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -8,6 +8,9 @@
 				<small><span class="glyphicon glyphicon-pencil"></span></small>
 			</h1>
 		</div>
+		<noscript>
+			<div class="alert alert-danger">{% trans %}Javascript needs to be activated in order to edit addons and releases.{% endtrans %}</div>
+		</noscript>
 		<ul class="nav nav-tabs" id="editAddonTabs">
 			<li class="active"><a href="#addon" data-toggle="tab">{% trans "Addon" %}</a></li>
 			<li><a href="#presentation" data-toggle="tab">{% trans "Presentation" %}</a></li>
@@ -45,9 +48,9 @@
 						</div>
 							<div class="col-lg-4">
 							<div class="form-group">
-								<label for="title">{%trans "Identifier" %}</label>
-								<input type="text" class="form-control" name="title" id="title" value="{{short}}" placeholder="{{shortidea}}">
-								<span class="help-block">Will be used in download url, ideally your filename.</br>
+								<label for="identifier">{%trans "Identifier" %}</label>
+								<input type="text" class="form-control" name="identifier" id="identifier" value="{{identifier}}" placeholder="{{identifier_proposal}}">
+								<span class="help-block">Will be used in download url, ideally your filename.<br>
 								Examples: moderncombat, hazard, metalmagic</span>
 							</div>
 							<div class="form-group">
@@ -58,7 +61,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+						<button type="submit" class="btn btn-primary" name="addon-submit">{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
@@ -91,9 +94,9 @@
 										</div>
 									</div>
 									<div class="col-sm-10">
-										<label for="intro">{% trans "Sitewide intro" %}</label>
+										<label for="introduction">{% trans "Sitewide intro" %}</label>
 										<div class="form-group">
-											<textarea class="form-control" id="intro" name="intro" rows="2" placeholder="{% trans %}Short intro text, will be used around the site alongside the title image.{% endtrans %}"></textarea>
+											<textarea class="form-control" id="introduction" name="introduction" rows="2" placeholder="{% trans %}Short intro text, will be used around the site alongside the title image.{% endtrans %}">{{introduction}}</textarea>
 										</div>
 									</div>
 								</div>
