update addon creation page

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -131,6 +131,14 @@ h1 small .label {
 	vertical-align: text-top;
 }
 
+label.btn {
+	width: 50%;
+
+	img {
+		width: 100%;
+	}
+}
+
 .tab-pane {
 	background-color: white;
 	border: 1px solid #ddd;
@@ -207,7 +215,7 @@ h1 a.btn {
 @media (min-width: @screen-lg-min) {
 	#front .carousel {
 		height: 417px;
-	} 
+	}
 }
 
 @media (min-width: @screen-md-min) {
