--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -1,4 +1,4 @@
-<nav id="mainnav" class="navbar navbar-inverse navbar-static-top" role="navigation">
+<nav id="mainnav" class="navbar navbar-inverse navbar-static-top hidden-print" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-navbar-collapse">
