--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -19,6 +19,7 @@
 		<div class="tab-content">
 			<div class="tab-pane active" id="addon">
 				<form role=form" method="post" action="{{filename}}?addon#addon">
+					<input type="hidden" name="addon-form">
 					<input type="hidden" name="state" value="{{state}}">
 					{% include 'functions/alert.twig' with {'selector' : 'addon'} %}
 					<div class="row">
@@ -34,8 +35,6 @@
 									<option value="312">Objektpaket</option>
 								</select>
 							</div>
-						</div>
-						<div class="col-lg-4">
 							<div class="form-group">
 								<label for="type">{%trans "Game" %}</label>
 								<select name="game" class="form-control" id="type" required>
@@ -44,30 +43,34 @@
 									{% endfor %}
 								</select>
 							</div>
-							
+						</div>
+						<div class="col-lg-4">
+
 						</div>
 							<div class="col-lg-4">
 							<div class="form-group">
 								<label for="identifier">{%trans "Identifier" %}</label>
 								<input type="text" class="form-control" name="identifier" id="identifier" value="{{identifier}}" placeholder="{{identifier_proposal}}">
-								<span class="help-block">Will be used in download url, ideally your filename.<br>
-								Examples: moderncombat, hazard, metalmagic</span>
+								<span class="help-block">{% trans %}Will be used in download url, ideally your filename.<br>
+								Examples: moderncombat, hazard, metalmagic.{% endtrans %}</span>
 							</div>
 							<div class="form-group">
 								<label for="title">{%trans "Abbreviation" %}</label>
 								<input type="text" class="form-control" name="abbreviation" id="title" value="{{abbreviation}}">
-								<span class="help-block">Only enter an abbreviation if it is unique and well known.</span>
+								<span class="help-block">{% trans %}Only enter an abbreviation if it is unique and well known.{% endtrans %}</span>
 							</div>
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" name="addon-submit">{% trans "Save" %}</button>
+						<span class="help-block">{% trans %}These details cannot be changed once the first release has been published.{% endtrans %}</span>
+						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
 
 			<div class="tab-pane" id="dependencies">
 				<form role=form" method="post" action="{{filename}}">
+					<input type="hidden" name="dependencies-form">
 					<div class="row">
 						<div class="col-md-4">
 							<div class="form-group">
@@ -79,35 +82,44 @@
 			</div>
 
 			<div class="tab-pane" id="presentation">
-				<form role=form" method="post" action="{{filename}}#presentation">
+				<form role=form" method="post" action="{{filename}}#presentation" name="test">
+					<input type="hidden" name="presentation-form">
 					<input type="hidden" name="state" value="{{state}}">
 					{% include 'functions/alert.twig' with {'selector' : 'presentation'} %}
 					<div class="row">
 						<div class="col-md-8">
 							<div class="form-group">
 								<div class="row">
-									<div class="col-sm-2">
-										<label for="title">{% trans "Title image" %}</label>
+									<div class="col-sm-3">
 										<div class="form-group">
+											<label for="title">{% trans "Title image" %}</label>
 											<!--<img class="media-object" src="http://placehold.it/76x57" width="76" height="57">!-->
 											<button class="btn btn-default"><span class="glyphicon glyphicon-search"></span> {% trans %}Select{% endtrans %}</button>
 										</div>
 									</div>
-									<div class="col-sm-10">
-										<label for="introduction">{% trans "Sitewide intro" %}</label>
+									<div class="col-sm-9">
 										<div class="form-group">
+											<label for="introduction">{% trans "Sitewide intro" %}</label>
 											<textarea class="form-control" id="introduction" name="introduction" rows="2" placeholder="{% trans %}Short intro text, will be used around the site alongside the title image.{% endtrans %}">{{introduction}}</textarea>
 										</div>
 									</div>
 								</div>
-								<label for="description">{% trans "Description" %}</label>
 								<div class="form-group">
+									<label for="description">{% trans "Description" %}</label>
 									<textarea class="form-control" id="description" name="description" rows="6" placeholder="{% trans %}Explain the general idea behind this addon.{% endtrans %}">{{description}}</textarea>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4">
-						<!--	<input type="hidden" name="state" value="{{state}}">
+							<div class="form-group">
+								<label for="website-url">{%trans "Website" %}</label>
+								<input type="text" class="form-control" name="website-url" id="website-url" value="{{website}}" placeholder="http://clonkforge.net/pr.php?pr=">
+							</div>
+							<div class="form-group">
+								<label for="bugtracker-url">{%trans "Bugtracker" %}</label>
+								<input type="text" class="form-control" name="bugtracker-url" id="bugtracker-url" value="{{bugtracker}}" placeholder="http://clonkforge.net/bugtrack.php?prj=">
+							</div>
+						<!--<input type="hidden" name="state" value="{{state}}">
 							<div class="form-group">
 								<label for="type">{% trans "Supported player counts" %}</label>
 								<div class="checkbox">
@@ -136,7 +148,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" name="presentation-submit">{% trans "Save" %}</button>
+						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
@@ -146,6 +158,7 @@
 					<div class="col-md-12">
 						<label for="version">{% trans "New release" %}</label>
 						<form role=form" class="form-inline" method="post" action="{{filename}}#releases">
+							<input type="hidden" name="release-form">
 							<input type="hidden" name="state" value="{{state}}">
 							{% include 'functions/alert.twig' with {'selector' : 'release'} %}
 							<div class="form-group">
@@ -186,6 +199,6 @@
 				</div>
 				{% endblock %}
 
-					{% block javascript %}
-						$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
-					{% endblock %}
+{% block javascript %}
+	$('.tab-pane form').areYouSure({'message':translation.unsavedChanges});
+{% endblock %}
