--- a/app/templates/site/api.twig
+++ b/app/templates/site/api.twig
@@ -8,6 +8,7 @@
 		<h1>{{ title }}</h1>
 	</div>
 	<p class="lead">{% trans %}Lorry offers a JSON based REST API for you to request data about addons and releases.{% endtrans %}</p>
+	<div class="alert alert-warning">{% trans %}<strong>Please note:</strong> The lorry api is not yet final and can change at any time.{% endtrans %}</div>
 	<h2>{% trans %}Endpoints{% endtrans %}</h2>
 	<p>{% trans %}Most endpoints correspond to the web interface and can therefore be reached by simply appending <code>.json</code> to the url.{% endtrans %}</p>
 	<table class="table">
