change title of api documentation

--- a/app/templates/site/api.twig
+++ b/app/templates/site/api.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Lorry REST API'|trans %}
+{% set title = 'Lorry API'|trans %}
 
 {% block content %}
 <div class="container">
